Try manylinux, just python 3.12

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,7 @@ jobs:
           - runner: ubuntu-22.04
             target: x86_64
         python-version:
-          - "3.11"
           - "3.12"
-          - "3.13"
     steps:
       - uses: actions/checkout@v4
       - name: Build wheels
@@ -54,9 +52,7 @@ jobs:
           - runner: macos-14
             target: aarch64
         python-version:
-          - "3.11"
           - "3.12"
-          - "3.13"
     steps:
       - uses: actions/checkout@v4
       - name: Build wheels
@@ -65,6 +61,7 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --interpreter python${{ matrix.python-version }}
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          manylinux: auto
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
